[metadata]
name = pysaga
version = 0.0.1
description = access to french audio saga data
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/pysaga
license = GPL
keywords = data, audio, saga
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
test_requires =
    pytest==3.5.0

[zest.releaser]
create-wheel = yes

[options.packages.find]
exclude =
    test
